--- a/pl/mail/chrome/messenger-mapi/mapi.properties
+++ b/pl/mail/chrome/messenger-mapi/mapi.properties
@@ -2,14 +2,14 @@
 dialogTitle        = %S
 dialogText         = Czy %S ma być domyślnym programem pocztowym?
 newsDialogText     = Czy %S ma być domyślnym programem grup dyskusyjnych?
-feedDialogText     = Czy %S ma być domyślnym programem do przeglądania kanałów RSS?
+feedDialogText     = Czy %S ma być domyślnym programem źródeł aktualności?
 checkboxText       = Nie wyświetlaj ponownie tego okna dialogowego
 setDefaultMail     = Program %S nie jest obecnie ustawiony jako domyślny program pocztowy. Czy ma on nim zostać?
 setDefaultNews     = Program %S nie jest obecnie ustawiony jako domyślny program grup dyskusyjnych. Czy ma on nim zostać?
-setDefaultFeed     = Program %S nie jest obecnie ustawiony jako domyślny program do przeglądania kanałów RSS. Czy ma on nim zostać?
+setDefaultFeed     = Program %S nie jest obecnie ustawiony jako domyślny program źródeł aktualności. Czy ma on nim zostać?
 alreadyDefaultMail = Program %S jest już ustawiony jako domyślny program pocztowy.
 alreadyDefaultNews = Program %S jest już ustawiony jako domyślny program grup dyskusyjnych.
-alreadyDefaultFeed = Program %S jest już ustawiony jako domyślny program do przeglądania kanałów RSS.
+alreadyDefaultFeed = Program %S jest już ustawiony jako domyślny program źródeł aktualności.
 
 # MAPI Messages
 loginText         = Wprowadź hasło dla %S:
