--- a/pl/mail/chrome/messenger-newsblog/newsblog.properties
+++ b/pl/mail/chrome/messenger-newsblog/newsblog.properties
@@ -1,33 +1,35 @@
-# Status strings used in the subscribe dialog
-
-subscribe-validating              = Trwa weryfikacja kanału RSS…
+subscribe-validating-feed         = Weryfikowanie źródła aktualności…
 subscribe-cancelSubscription      = Czy na pewno zrezygnować z subskrybowania tego kanału?
 subscribe-cancelSubscriptionTitle = Subskrybowanie kanału…
-subscribe-noFeedSelected          = <nie wybrano kanału RSS>
+subscribe-noFeedIsSelected        = <nie wybrano źródła aktualności>
 subscribe-feedAlreadySubscribed   = Ten kanał jest obecnie subskrybowany.
 subscribe-errorOpeningFile        = Nie można otworzyć pliku.
 
-subscribe-OPMLImportTitle     = Proszę wybrać plik OPML do zaimportowania.
-subscribe-OPMLExportTitle     = Eksportowanie listy kanałów do pliku OPML
-subscribe-OPMLExportFileTitle = Kanały wyeksportowane z programu Thunderbird
-subscribe-OPMLExportFileName  = Moje_kanały.opml
-#LOCALIZATION NOTE: %S is the name of the OPML file the user tried to import.
-subscribe-errorInvalidOPMLFile = %S nie jest poprawnym plikiem OPML albo wystąpił błąd podczas jego importowania.
+subscribe-OPMLImportTitle           = Proszę wybrać plik OPML do zaimportowania.
+subscribe-OPMLExportTitle           = Eksportowanie listy kanałów do pliku OPML
+## LOCALIZATION NOTE(subscribe-OPMLExportFileDialogTitle): %S is the brandShortName
+subscribe-OPMLExportFileDialogTitle = %S - eksport OPML
+subscribe-OPMLExportDefaultFileName = aktualnosci.%S.opml
+## LOCALIZATION NOTE(subscribe-errorInvalidOPMLFile): %S is the name of the OPML file the user tried to import.
+subscribe-errorInvalidOPMLFile      = %S nie jest poprawnym plikiem OPML albo wystąpił błąd podczas jego importowania.
 
 subscribe-OPMLExportOPMLFilesFilterText = Pliki OPML
 
-#LOCALIZATION NOTE: %S is the name of the feed the user wants to unsubscribe from.
 subscribe-confirmFeedDeletionTitle = Usuń kanał
+## LOCALIZATION NOTE(subscribe-confirmFeedDeletion): %S is the name of the feed the user wants to unsubscribe from.
 subscribe-confirmFeedDeletion      = Czy na pewno zrezygnować z subskrypcji kanału: \n %S?
 
-# when downloading new feed items from the subscribe dialog.
-# LOCALIZATION NOTE: Do not translate %d in the following line.
-# The first %S will receive the number of messages received so far;
-# the second %S will receive the total number of messages
-subscribe-fetchingFeedItems = Pobieranie artykułów kanału (%S z %S)
+## LOCALIZATION NOTE(subscribe-gettingFeedItems):
+##  - The first %S is the number of articles processed so far;
+##  - The second %S is the total number of items
+subscribe-gettingFeedItems    = Pobieranie artykułów aktualności (%S z %S)…
 
-newsblog-noNewArticlesForFeed = Nie ma nowych artykułów dla tego kanału.
+newsblog-noNewArticlesForFeed = Nie ma nowych artykułów dla tego źródła.
+newsblog-networkErrorTitle    = Błąd połączenia sieciowego
+## LOCALIZATION NOTE(newsblog-networkError): %S is the feed URL
 newsblog-networkError         = Odnalezienie %S było niemożliwe. Sprawdź poprawność nazwy, a następnie spróbuj ponownie.
-newsblog-invalidFeed          = %S nie jest poprawnym kanałem RSS.
-newsblog-getNewMailCheck      = Sprawdzanie, czy kanały RSS zawierają nowe elementy
 
+newsblog-feedNotValidTitle = Błędne źródło
+## LOCALIZATION NOTE(newsblog-feedNotValid): %S is the feed URL
+newsblog-feedNotValid      = %S nie jest poprawnym źródłem aktualności.
+newsblog-getNewMsgsCheck   = Sprawdzanie, czy źródła zawierają nowe artykuły…
