--- a/de/mail/chrome/messenger-newsblog/newsblog.properties
+++ b/de/mail/chrome/messenger-newsblog/newsblog.properties
@@ -1,33 +1,36 @@
-# Status strings used in the subscribe dialog
-
-subscribe-validating=Überprüfe den RSS-Feed…
+subscribe-validating-feed=Überprüfe den Feed…
 subscribe-cancelSubscription=Wollen Sie wirklich das Abonnement des aktuellen Feeds abbestellen?
 subscribe-cancelSubscriptionTitle=Abonniere Feed…
-subscribe-noFeedSelected=<kein RSS-Feed ausgewählt>
+subscribe-noFeedIsSelected=<kein Feed ausgewählt>
 subscribe-feedAlreadySubscribed=Sie haben diesen Feed bereits abonniert.
 subscribe-errorOpeningFile=Öffnen der Datei fehlgeschlagen.
 
 subscribe-OPMLImportTitle=Importiere Feeds aus einer OPML-Datei
 subscribe-OPMLExportTitle=Exportiere Feeds in eine OPML-Datei
-subscribe-OPMLExportFileTitle=Thunderbird OPML-Export
-subscribe-OPMLExportFileName=Meine_Thunderbird_Feeds.opml
-#LOCALIZATION NOTE: %S is the name of the OPML file the user tried to import.
+## LOCALIZATION NOTE(subscribe-OPMLExportFileDialogTitle): %S is the brandShortName
+subscribe-OPMLExportFileDialogTitle=%S OPML-Export
+## LOCALIZATION NOTE(subscribe-OPMLExportDefaultFileName): %S is the brandShortName
+subscribe-OPMLExportDefaultFileName=Meine%SFeeds.opml
+## LOCALIZATION NOTE(subscribe-errorInvalidOPMLFile): %S is the name of the OPML file the user tried to import.
 subscribe-errorInvalidOPMLFile=Entweder ist %S keine gültige OPML-Datei oder es gab einen Fehler beim Importieren.
 
 subscribe-OPMLExportOPMLFilesFilterText=OPML-Dateien
 
-#LOCALIZATION NOTE: %S is the name of the feed the user wants to unsubscribe from.
 subscribe-confirmFeedDeletionTitle=Feed entfernen
-subscribe-confirmFeedDeletion=Wollen Sie das Abonnement des Feeds wirklich abbestellen?\n\n%S
+## LOCALIZATION NOTE(subscribe-confirmFeedDeletion): %S is the name of the feed the user wants to unsubscribe from.
+subscribe-confirmFeedDeletion=Wollen Sie das Abonnement des folgenden Feeds wirklich abbestellen?\n\n%S
 
-# when downloading new feed items from the subscribe dialog. 
-# LOCALIZATION NOTE: Do not translate %d in the following line.
-# The first %S will receive the number of messages received so far;
-# the second %S will receive the total number of messages
-subscribe-fetchingFeedItems=Herunterladen der Feed-Artikel (%S von %S)
+## LOCALIZATION NOTE(subscribe-gettingFeedItems):
+##  - The first %S is the number of articles processed so far;
+##  - The second %S is the total number of items
+subscribe-gettingFeedItems=Herunterladen der Feed-Artikel (%S von %S)…
 
 newsblog-noNewArticlesForFeed=Keine neuen Artikel für den Feed vorhanden.
+newsblog-networkErrorTitle=Netzwerkfehler
+## LOCALIZATION NOTE(newsblog-networkError): %S is the feed URL
 newsblog-networkError=%S konnte nicht gefunden werden. Bitte prüfen Sie den Namen und versuchen es erneut.
-newsblog-invalidFeed=%S ist kein gültiger RSS-Feed.
-newsblog-getNewMailCheck=Suche in RSS-Feeds nach neuen Einträgen
 
+newsblog-feedNotValidTitle=Ungültiger Feed
+## LOCALIZATION NOTE(newsblog-feedNotValid): %S is the feed URL
+newsblog-feedNotValid=%S ist kein gültiger Feed.
+newsblog-getNewMsgsCheck=Suche in Feeds nach neuen Artikeln…
