--- a/id/mail/chrome/messenger-newsblog/newsblog.properties
+++ b/id/mail/chrome/messenger-newsblog/newsblog.properties
@@ -1,19 +1,21 @@
-subscribe-validating = Memeriksa Feed RSS…
+subscribe-validating-feed = Memeriksa Feed…
 subscribe-cancelSubscription = Yakin akan berhenti berlangganan feed berikut?
 subscribe-cancelSubscriptionTitle = Berlangganan ke Feed…
-subscribe-noFeedSelected = <tidak ada feed RSS yang dipilih>
+subscribe-noFeedIsSelected = <tidak ada feed yang dipilih>
 subscribe-feedAlreadySubscribed = Anda sudah berlangganan feed ini.
 subscribe-errorOpeningFile = Tidak dapat membuka berkas.
 subscribe-OPMLImportTitle = Pilih berkas OPML untuk diimpor
 subscribe-OPMLExportTitle = Ekspor daftar feed sebagai berkas OPML
-subscribe-OPMLExportFileTitle = Ekspor OPML Thunderbird
-subscribe-OPMLExportFileName = MyThunderbirdFeeds.opml
+subscribe-OPMLExportFileDialogTitle = Ekspor OPML %S
+subscribe-OPMLExportDefaultFileName = My%SFeeds.opml
 subscribe-errorInvalidOPMLFile = %S bukan merupakan berkas OPML yang benar atau telah terjadi kesalahan saat mengimpor berkas.
 subscribe-OPMLExportOPMLFilesFilterText = Berkas OPML
 subscribe-confirmFeedDeletionTitle = Hapus Feed
 subscribe-confirmFeedDeletion = Yakin akan berhenti berlangganan dari feed: \n %S?
-subscribe-fetchingFeedItems = Mengunduh artikel feed (%S dari %S)
+subscribe-gettingFeedItems = Mengunduh artikel feed (%S dari %S)…
 newsblog-noNewArticlesForFeed = Tidak ada artikel baru dari feed ini.
+newsblog-networkErrorTitle = Kesalahan Jaringan
 newsblog-networkError = %S tidak ditemukan. Periksa ulang namanya dan coba lagi.
-newsblog-invalidFeed = %S bukan feed RSS yang benar.
-newsblog-getNewMailCheck = Memeriksa item baru pada feed RSS
+newsblog-feedNotValidTitle = Feed Tidak Valid
+newsblog-feedNotValid = %S bukan feed yang benar.
+newsblog-getNewMsgsCheck = Memeriksa item baru pada feed…
