--- a/id/mail/chrome/messenger/messenger.properties
+++ b/id/mail/chrome/messenger/messenger.properties
@@ -137,7 +137,7 @@ draftsFolderName = Konsep
 templatesFolderName = Templat
 outboxFolderName = Kotak Keluar
 junkFolderName = Junk
-archivesFolderName = Gudang
+archivesFolderName = Arsip
 specialFolderDeletionErr = Penghapusan folder khusus %S tidak diizinkan untuk akun IMAP.
 specialFolderDeletionErrTitle = Penghapusan Folder Khusus
 priorityLowest = Terendah
@@ -266,6 +266,8 @@ emptyTrashMessage = Yakin akan menghapus semua pesan dan subfolder dalam folder 
 emptyTrashDontAsk = Jangan tanya lagi.
 junkAnalysisPercentComplete = Analisis junk selesai %S
 processingJunkMessages = Memproses Pesan Junk
+fileNotFoundTitle = Berkas Tidak Ditemukan
+fileNotFoundMsg = Berkas %S tidak ada.
 headerFieldYou = Anda
 growlNotification = Email Baru
 whatsNew = Kabar Terbaru
