--- a/fy-NL/mail/chrome/messenger/messenger.properties
+++ b/fy-NL/mail/chrome/messenger/messenger.properties
@@ -351,6 +351,16 @@ biffNotification_messages=hat %1$S nije berjochten
 newBiffNotification_message=%1$S hat %2$S nij berjocht
 newBiffNotification_messages=%1$S hat %2$S nije berjochten
 
+# LOCALIZATION NOTE(macBiffNotification is Mac only):
+#  %1$S is the number of new messages
+#  %2$S is a list of names and/or email addresses separated by biffNotification_separator
+#  %3$S is the number of new messages not displayed in the biff alert
+macBiffNotification_message=%1$S nij berjocht fan %2$S.
+macBiffNotification_messages=%1$S nije berjochten fan %2$S.
+macBiffNotification_messages_extra=%1$S nije berjochten fan %2$S en %3$S mear.
+# Used to separate names/email addresses in a list.  Note the trailing space ', '
+macBiffNotification_separator=, 
+
 # For the Quota tab in the mail folder properties dialog
 quotaUsedFree=%S fan %S KB br\u00FBkt
 quotaPercentUsed=%S%% fol
@@ -455,9 +465,26 @@ emptyTrashDontAsk=My net wer freegje.
 junkAnalysisPercentComplete= %S net-winske-berjochte-analyse folslein
 processingJunkMessages=Net-winske berjochten ferwurkje
 
+# Messenger bootstrapping messages
+fileNotFoundTitle = Best\u00E2n net f\u00FBn
+#LOCALIZATION NOTE(fileNotFoundMsg): %S is the filename
+fileNotFoundMsg = It best\u00E2n %S bestiet net.
+
 # second person direct object pronoun; used in the collapsed header view if
 # the user is in the To or Cc field of a message
 headerFieldYou=Jo
 
 # The what's new tab title, shown on version update
 whatsNew=Wat is nij
+
+#LOCALIZATION NOTE (glodaSearch_results_why_*):  These strings populate the
+# glodaWhyColumn when performing a gloda-backed search, explaining why a
+# specific result is present in the search.  Because of how the message grouping
+# mechanism works, this value is both the value in the "Why" column as well as
+# the header for the group (when sorting/grouping on the why column.)  Short
+# strings are preferable so the why column can be understood without taking up
+# too much space.
+glodaSearch_results_why_contact=Kontakt
+glodaSearch_results_why_subject=Underwerp
+glodaSearch_results_why_body=Kearn
+glodaSearch_results_why_attachment=Bylage
