--- a/sq/mail/chrome/messenger/importMsgs.properties
+++ b/sq/mail/chrome/messenger/importMsgs.properties
@@ -249,6 +249,11 @@ ImportModuleFolderName=Importim %S
 ## @loc None
 2135=Shënime
 
+# Description: Address book field name
+## @name IMPORT_FIELD_DESC_END
+## @loc None
+2136=Emër në Ekran
+
 #Error strings
 ImportAlreadyInProgress=Ka, në kryerje e sipër, një veprim importimi. Riprovoni kur të ketë përfunduar importimi i tanishëm.
 
