--- a/pl/mail/installer/mui.properties
+++ b/pl/mail/installer/mui.properties
@@ -63,7 +63,7 @@ MUI_TEXT_FINISH_SUBTITLE     = Instalacja zakończona powodzeniem.
 MUI_TEXT_ABORT_TITLE         = Instalacja przerwana
 MUI_TEXT_ABORT_SUBTITLE      = Instalacja nie powiodła się.
 MUI_BUTTONTEXT_FINISH        = Za&kończ
-MUI_TEXT_FINISH_INFO_TITLE   = Kończenie instalatora programu $BrandFullNameDA
+MUI_TEXT_FINISH_INFO_TITLE   = Koniec pracy instalatora programu $BrandFullNameDA
 MUI_TEXT_FINISH_INFO_TEXT    = Program $BrandFullNameDA został zainstalowany na tym komputerze.\n\nKliknij Zakończ, by zamknąć program instalatora.
 MUI_TEXT_FINISH_INFO_REBOOT  = Do ukończenia procesu instalacji programu $BrandFullNameDA konieczne jest ponowne uruchomienie komputera. Czy uruchomić go teraz ponownie?
 MUI_TEXT_FINISH_REBOOTNOW    = Uruchom teraz ponownie
