--- a/nb-NO/mail/chrome/messenger-newsblog/newsblog.properties
+++ b/nb-NO/mail/chrome/messenger-newsblog/newsblog.properties
@@ -1,33 +1,35 @@
-# Status strings used in the subscribe dialog
-
 subscribe-validating=Kontrollerer nyhetskilden …
 subscribe-cancelSubscription=Er du sikker på at du vil avbryte abonnementet på denne nyhetskilden?
 subscribe-cancelSubscriptionTitle=Abonnerer …
-subscribe-noFeedSelected=<ingen RSS nyhetskilde valgt>
+subscribe-noFeedIsSelected=<ingen nyhetskilde valgt>
 subscribe-feedAlreadySubscribed=Du abonnerer allerede på denne nyhetskilden.
 subscribe-errorOpeningFile=Klarte ikke åpne filen.
 
 subscribe-OPMLImportTitle=Velg OPML-fil å importere
 subscribe-OPMLExportTitle=Eksporter nyhetskilder som OPML-fil
-subscribe-OPMLExportFileTitle=Thunderbird OPML-eksport
-subscribe-OPMLExportFileName=MineThunderbirdKilder.opml
-#LOCALIZATION NOTE: %S is the name of the OPML file the user tried to import.
+## LOCALIZATION NOTE(subscribe-OPMLExportFileDialogTitle): %S is the brandShortName
+subscribe-OPMLExportFileTitle=%S OPML-eksport
+## LOCALIZATION NOTE(subscribe-OPMLExportDefaultFileName): %S is the brandShortName
+subscribe-OPMLExportDefaultFileName=Mine%SKilder.opml
+## LOCALIZATION NOTE(subscribe-errorInvalidOPMLFile): %S is the name of the OPML file the user tried to import.
 subscribe-errorInvalidOPMLFile=Enten er %S ikke en gyldig OPML-fil, eller det oppstod en feil under import av filen.
 
 subscribe-OPMLExportOPMLFilesFilterText=OPML-filer
 
-#LOCALIZATION NOTE: %S is the name of the feed the user wants to unsubscribe from.
 subscribe-confirmFeedDeletionTitle=Slett nyhetskilde
+## LOCALIZATION NOTE(subscribe-confirmFeedDeletion): %S is the name of the feed the user wants to unsubscribe from.
 subscribe-confirmFeedDeletion=Er du sikker på at du vil avbryte abonnementet på nyhetskilden: \n %S?
 
-# when downloading new feed items from the subscribe dialog.
-# LOCALIZATION NOTE: Do not translate %d in the following line.
-# The first %S will receive the number of messages received so far;
-# the second %S will receive the total number of messages
-subscribe-fetchingFeedItems=Laster ned artikler (%S av %S)
+## LOCALIZATION NOTE(subscribe-gettingFeedItems):
+##  - The first %S is the number of articles processed so far;
+##  - The second %S is the total number of items
+subscribe-gettingFeedItems=Laster ned artikler (%S av %S) …
 
 newsblog-noNewArticlesForFeed=Det er ingen nye artikler i denne nyhetskilden.
+newsblog-networkErrorTitle=Nettverksfeil
+## LOCALIZATION NOTE(newsblog-networkError): %S is the feed URL
 newsblog-networkError=Klarte ikke finne %S. Kontroller navnet og prøv igjen.
-newsblog-invalidFeed=%S er ikke en gyldig nyhetskilde (RSS).
-newsblog-getNewMailCheck=Ser etter nyhetsoppdateringer
-
+newsblog-feedNotValidTitle=Ugyldig nyhetskilde
+## LOCALIZATION NOTE(newsblog-feedNotValid): %S is the feed URL
+newsblog-feedNotValid=%S er ikke en gyldig nyhetskilde.
+newsblog-getNewMsgsCheck=Ser etter nyhetsoppdateringer …
