--- a/nl/mail/chrome/messenger/messenger.properties
+++ b/nl/mail/chrome/messenger/messenger.properties
@@ -465,6 +465,11 @@ emptyTrashDontAsk=Mij niet opnieuw vragen.
 junkAnalysisPercentComplete=%S van ongewensteberichtenanalyse voltooid
 processingJunkMessages=Ongewenste berichten verwerken
 
+# Messenger bootstrapping messages
+fileNotFoundTitle = Bestand niet gevonden
+#LOCALIZATION NOTE(fileNotFoundMsg): %S is the filename
+fileNotFoundMsg = Het bestand %S bestaat niet.
+
 # second person direct object pronoun; used in the collapsed header view if
 # the user is in the To or Cc field of a message
 #hetzelfde vertaald als gmail,MM)
