--- a/ro/mail/chrome/messenger-newsblog/newsblog.properties
+++ b/ro/mail/chrome/messenger-newsblog/newsblog.properties
@@ -1,33 +1,35 @@
-# Status strings used in the subscribe dialog
-
-subscribe-validating=Verificare flux RSS…
+subscribe-validating-feed=Verificare flux…
 subscribe-cancelSubscription=Sunteți sigur că doriți să renunțați la abonarea la fluxul curent?
 subscribe-cancelSubscriptionTitle=Abonare la un flux…
-subscribe-noFeedSelected=<nici un flux RSS selectat>
+subscribe-noFeedIsSelected=<niciun flux selectat>
 subscribe-feedAlreadySubscribed=Sunteți deja abonat la acest flux.
 subscribe-errorOpeningFile=Nu pot deschide fișierul.
 
 subscribe-OPMLImportTitle=Selectați fișierul OPML pentru import
 subscribe-OPMLExportTitle=Export flux ca fișier OPML
-subscribe-OPMLExportFileTitle=Export OPML Thunderbird
-subscribe-OPMLExportFileName=MyThunderbirdFeeds.opml
-#LOCALIZATION NOTE: %S is the name of the OPML file the user tried to import.
+## LOCALIZATION NOTE(subscribe-OPMLExportFileDialogTitle): %S is the brandShortName
+subscribe-OPMLExportFileDialogTitle=Export OPML %S
+## LOCALIZATION NOTE(subscribe-OPMLExportDefaultFileName): %S is the brandShortName
+subscribe-OPMLExportDefaultFileName=FluxurileMele%S.opml
+## LOCALIZATION NOTE(subscribe-errorInvalidOPMLFile): %S is the name of the OPML file the user tried to import.
 subscribe-errorInvalidOPMLFile=Fie %S nu este un fișier OPML valid sau a fost o eroare la importul fișierului.
 
 subscribe-OPMLExportOPMLFilesFilterText=Fișiere OPML
 
-#LOCALIZATION NOTE: %S is the name of the feed the user wants to unsubscribe from.
 subscribe-confirmFeedDeletionTitle=Eliminare flux
+## LOCALIZATION NOTE(subscribe-confirmFeedDeletion): %S is the name of the feed the user wants to unsubscribe from.
 subscribe-confirmFeedDeletion=Sigur doriți să vă dezabonați de la fluxul: \n %S?
 
-# when downloading new feed items from the subscribe dialog. 
-# LOCALIZATION NOTE: Do not translate %d in the following line.
-# The first %S will receive the number of messages received so far;
-# the second %S will receive the total number of messages
-subscribe-fetchingFeedItems=Descărcare articole flux (%S din %S)
+## LOCALIZATION NOTE(subscribe-gettingFeedItems):
+##  - The first %S is the number of articles processed so far;
+##  - The second %S is the total number of items
+subscribe-gettingFeedItems=Se descarcă articolele fluxului (%S din %S)…
 
 newsblog-noNewArticlesForFeed=Nu este nici un articol nou în acest flux.
+newsblog-networkErrorTitle=Eroare de rețea
+## LOCALIZATION NOTE(newsblog-networkError): %S is the feed URL
 newsblog-networkError=Nu s-a putut găsi %S. Vă rugăm verificați numele și încercați din nou.
-newsblog-invalidFeed=%S nu este un flux RSS valid.
-newsblog-getNewMailCheck=Verificare flux RSS pentru articole noi
-
+newsblog-feedNotValidTitle=Flux nevalid
+## LOCALIZATION NOTE(newsblog-feedNotValid): %S is the feed URL
+newsblog-feedNotValid=%S nu este un flux valid.
+newsblog-getNewMsgsCheck=Se verifică dacă fluxurile au noutăți…
