--- a/ro/mail/installer/custom.properties
+++ b/ro/mail/installer/custom.properties
@@ -50,57 +50,57 @@
 # You can use \n to create a newline in the string but only when the string
 # from en-US contains a \n.
 
-REG_APP_DESC=$BrandShortName este o aplicaţie completă pentru poşta electronică. $BrandShortName suportă protocoalele IMAP şi POP precum şi formatarea HTML a mesajelor. La curent cu noutăţile în domeniu, $BrandShortName oferă control pentru eliminarea mesajelor spam, capabilităţi RSS, căutare rapidă şi puternică, verificarea ortografiei pe măsură ce tastaţi, căsuţă de intrare globală şi filtrare avansată a mesajelor.
-CONTEXT_OPTIONS=&Opţiuni $BrandShortName
+REG_APP_DESC=$BrandShortName este o aplicație completă pentru poșta electronică. $BrandShortName suportă protocoalele IMAP și POP precum și formatarea HTML a mesajelor. La curent cu noutățile în domeniu, $BrandShortName oferă control pentru eliminarea mesajelor spam, capabilități RSS, căutare rapidă și puternică, verificarea ortografiei pe măsură ce tastați, căsuță de intrare globală și filtrare avansată a mesajelor.
+CONTEXT_OPTIONS=&Opțiuni $BrandShortName
 CONTEXT_SAFE_MODE=$BrandShortName în modul &sigur
 SAFE_MODE=Modul sigur
 OPTIONS_PAGE_TITLE=Tip de instalare
-OPTIONS_PAGE_SUBTITLE=Alegeţi opţiunile de instalare
-OPTIONS_MAKE_DEFAULT=&Foloseşte $BrandShortName ca aplicaţie implicită pentru email
+OPTIONS_PAGE_SUBTITLE=Alegeți opțiunile de instalare
+OPTIONS_MAKE_DEFAULT=&Folosește $BrandShortName ca aplicație implicită pentru email
 SHORTCUTS_PAGE_TITLE=Creează scurtături
-SHORTCUTS_PAGE_SUBTITLE=Creează iconiţe pentru program
+SHORTCUTS_PAGE_SUBTITLE=Creează iconițe pentru program
 SUMMARY_PAGE_TITLE=Sumar
 SUMMARY_PAGE_SUBTITLE=Gata de a începe instalarea $BrandShortName
 SUMMARY_INSTALLED_TO=$BrandShortName va fi instalat în:
 SUMMARY_REBOOT_REQUIRED_INSTALL=Ar putea fi necesară o repornire a calculatorului pentru a încheia instalarea.
 SUMMARY_REBOOT_REQUIRED_UNINSTALL=Ar putea fi necesară o repornire a calculatorului pentru a încheia dezinstalarea.
-SUMMARY_MAKE_DEFAULT=$BrandShortName va fi setat ca aplicaţia implicită pentru email.
-SUMMARY_CLICK=Apăsaţi „Instalează” pentru a continua.
-SURVEY_TEXT=Spuneţi-&ne ce credeţi despre $BrandShortName
+SUMMARY_MAKE_DEFAULT=$BrandShortName va fi setat ca aplicația implicită pentru email.
+SUMMARY_CLICK=Apăsați „Instalează” pentru a continua.
+SURVEY_TEXT=Spuneți-&ne ce credeți despre $BrandShortName
 LAUNCH_TEXT=&Lansează $BrandFullName acum
-CREATE_ICONS_DESC=Creează iconiţe pentru $BrandShortName:
-ICONS_DESKTOP=Pe spaţiul meu &de lucru
+CREATE_ICONS_DESC=Creează iconițe pentru $BrandShortName:
+ICONS_DESKTOP=Pe spațiul meu &de lucru
 ICONS_STARTMENU=În dosarul „Programe” al meniului &Start
 ICONS_QUICKLAUNCH=Pe bara de lansare &rapidă
-WARN_MANUALLY_CLOSE_APP_INSTALL=$BrandShortName trebuie închis pentru a continua cu instalarea.\n\nVă rugăm să închideţi $BrandShortName pentru a continua.
-WARN_MANUALLY_CLOSE_APP_UNINSTALL=$BrandShortName trebuie să fie închis pentru a continua cu dezinstalarea.\n\nVă rugăm să închideţi $BrandShortName pentru a continua.
-WARN_MANUALLY_CLOSE_APP_LAUNCH=$BrandShortName rulează deja.\n\nVă rugăm să închideţi $BrandShortName înainte de a lansa versiunea pe care tocmai aţi instalat-o.
-WARN_WRITE_ACCESS=Nu aveţi drepturi de scriere în directorul de instalare.\n\nApăsaţi „OK” pentru a alege un alt director.
-WARN_DISK_SPACE=Nu aveţi spaţiu suficient pe disc pentru a instala în această locaţie.\n\nApăsaţi „OK” pentru a alege o altă locaţie.
+WARN_MANUALLY_CLOSE_APP_INSTALL=$BrandShortName trebuie închis pentru a continua cu instalarea.\n\nVă rugăm să închideți $BrandShortName pentru a continua.
+WARN_MANUALLY_CLOSE_APP_UNINSTALL=$BrandShortName trebuie să fie închis pentru a continua cu dezinstalarea.\n\nVă rugăm să închideți $BrandShortName pentru a continua.
+WARN_MANUALLY_CLOSE_APP_LAUNCH=$BrandShortName rulează deja.\n\nVă rugăm să închideți $BrandShortName înainte de a lansa versiunea pe care tocmai ați instalat-o.
+WARN_WRITE_ACCESS=Nu aveți drepturi de scriere în directorul de instalare.\n\nApăsați „OK” pentru a alege un alt director.
+WARN_DISK_SPACE=Nu aveți spațiu suficient pe disc pentru a instala în această locație.\n\nApăsați „OK” pentru a alege o altă locație.
 WARN_MIN_SUPPORTED_OS_MSG=Ne pare rău, $BrandShortName nu poate fi instalat. Această versiune de $BrandShortName necesită ${MinSupportedVer} sau mai nou.
-WARN_RESTART_REQUIRED_UNINSTALL=Calculatorul dumneavoastră trebuie repornit pentru a încheia o dezinstalare anterioară de $BrandShortName. Doriţi să reporniţi acum?
-WARN_RESTART_REQUIRED_UPGRADE=Calculatorul dumneavoastră trebuie repornit pentru a încheia o actualizare mai veche de $BrandShortName. Doriţi să reporniţi calculatorul acum?
+WARN_RESTART_REQUIRED_UNINSTALL=Calculatorul dumneavoastră trebuie repornit pentru a încheia o dezinstalare anterioară de $BrandShortName. Doriți să reporniți acum?
+WARN_RESTART_REQUIRED_UPGRADE=Calculatorul dumneavoastră trebuie repornit pentru a încheia o actualizare mai veche de $BrandShortName. Doriți să reporniți calculatorul acum?
 ERROR_CREATE_DIRECTORY_PREFIX=Eroarea la crearea directorului:
-ERROR_CREATE_DIRECTORY_SUFFIX=Apăsaţi „Renunţă” pentru a opri instalarea sau\n„Încearcă din nou” pentru a încerca din nou.
+ERROR_CREATE_DIRECTORY_SUFFIX=Apăsați „Renunță” pentru a opri instalarea sau\n„Încearcă din nou” pentru a încerca din nou.
 
 UN_CONFIRM_PAGE_TITLE=Dezinstalare $BrandFullName
-UN_CONFIRM_PAGE_SUBTITLE=Înlăturaţi $BrandFullName de pe calculatorul dumneavoastră.
+UN_CONFIRM_PAGE_SUBTITLE=Înlăturați $BrandFullName de pe calculatorul dumneavoastră.
 UN_CONFIRM_UNINSTALLED_FROM=$BrandShortName va fi dezinstalat din următoarea amplasare:
-UN_CONFIRM_CLICK=Apăsaţi „Dezinstalează” pentru a continua.
+UN_CONFIRM_CLICK=Apăsați „Dezinstalează” pentru a continua.
 
 BANNER_CHECK_EXISTING=Se verifică instalarea existentă…
 
 STATUS_INSTALL_APP=Se instalează $BrandShortName...
-STATUS_INSTALL_LANG=Se instalează fişierele de limbă (${AB_CD})…
+STATUS_INSTALL_LANG=Se instalează fișierele de limbă (${AB_CD})…
 STATUS_UNINSTALL_MAIN=Se dezinstalează $BrandShortName...
-STATUS_CLEANUP=Se curăţă colivia…
+STATUS_CLEANUP=Se curăță colivia…
 
 # _DESC strings support approximately 65 characters per line.
 # One line
-OPTIONS_SUMMARY=Alegeţi tipul de instalare pe care îl preferaţi şi apăsaţi „Înainte >”.
+OPTIONS_SUMMARY=Alegeți tipul de instalare pe care îl preferați și apăsați „Înainte >”.
 # One line
-OPTION_STANDARD_DESC=$BrandShortName va fi instalat cu opţiunile cele mai comune.
+OPTION_STANDARD_DESC=$BrandShortName va fi instalat cu opțiunile cele mai comune.
 OPTION_STANDARD_RADIO=&Standard
 # Two lines
-OPTION_CUSTOM_DESC=Puteţi alege opţiunile individuale care vor fi instalate. Recomandat pentru utilizatorii experimentaţi.
+OPTION_CUSTOM_DESC=Puteți alege opțiunile individuale care vor fi instalate. Recomandat pentru utilizatorii experimentați.
 OPTION_CUSTOM_RADIO=&Personalizat
