--- a/id/mail/chrome/messenger/activity.properties
+++ b/id/mail/chrome/messenger/activity.properties
@@ -3,7 +3,7 @@ processing = Diproses
 notStarted = Belum Dimulai
 failed = Gagal
 waitingForInput = Menunggu input
-waitingForRetry = Menunggu mencoba ulang
+waitingForRetry = Menunggu untuk mencoba ulang
 completed = Selesai
 canceled = Dibatalkan
 yesterday = Kemarin
@@ -16,15 +16,15 @@ failedToSendMessage = Gagal mengirim pesan
 failedToSendMessageTo = Gagal mengirim pesan ke %S
 autosyncProcessProgress = Mengunduh %1$S dari %2$S pada %3$S
 autosyncProcessDisplayText = Sedang memutakhirkan folder %S
-autosyncEventDisplayText = %S telah mutakhir
+autosyncEventDisplayText = %S telah dimutakhirkan
 autosyncEventStatusText = Jumlah pesan yang telah diunduh: %S
 autosyncEventStatusTextNoMsgs = Tidak ada pesan yang diunduh
 autosyncContextDisplayText = Mensinkronkan: %S
-deletedMessages = #1 pesan dihapus;#1 dihapus
+deletedMessages = #1 pesan dihapus;#1 pesan dihapus
 movedMessages = #1 dipindahkan dari #2 ke #3;#1 dipindahkan dari #2 ke #3
 copiedMessages = #1 disalin dari #2 ke #3;#1 disalin dari #2 ke #3
 fromServerToServer = dari #1 ke #2
 deletedFolder = Folder #1 dihapus
 movedFolder = Folder #1 dipindahkan ke folder #2
 copiedFolder = Folder #1 disalin ke folder #2
-renamedFolder = Folder #1 diganti namanya ke #2
+renamedFolder = Folder #1 diganti namanya menjadi #2
